--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="col-lg-12 pt-4 pt-lg-0 content">
           	<h3>Research Interests</h3>
             <p><font size="4px" color="black">
-              My research interests include data-driven interactive behaviour modelling and motion planning in dense environment, continual Learning/lifelong learning in robotics (e.g., automated vehicles), traffic safety assessment and collective intelligence emergence in edge (Postdoctoral research).
+              My research interests include data-driven interactive behaviour modelling and motion planning in dense environment, continual/lifelong learning in robotics (e.g., automated vehicles), traffic safety assessment and collective intelligence emergence in edge (Postdoctoral research).
               Please refer to the Research Section for more details of my research.
               <!--sjtu-->
             <!--</p>
